--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
 
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
