--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-apt'
 
 android {
     compileSdkVersion 24
@@ -31,6 +32,9 @@ dependencies {
 
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.facebook.android:facebook-android-sdk:4.+'
+
+    compile 'com.jakewharton:butterknife:8.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
 }
 
