--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     apt 'org.parceler:parceler:1.1.1'
 
     compile 'com.google.firebase:firebase-database:9.4.0'
+    compile 'com.firebaseui:firebase-ui-database:0.5.1'
 
 }
 
