--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'com.android.support:design:24.0.0'
+
+    compile 'com.android.support:cardview-v7:24.0.+'
+    compile 'com.android.support:recyclerview-v7:24.0.+'
+
     compile 'com.squareup.picasso:picasso:2.5.2'
 
     compile 'com.google.firebase:firebase-auth:9.4.0'
