--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,9 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAsHfgV9aUFJ1OJWxbGE9cjmqMUjxV9yPk"/>
-
+            android:value="AIzaSyAsHfgV9aUFJ1OJWxbGE9cjmqMUjxV9yPk" />
 
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
@@ -50,6 +48,10 @@
         <activity
             android:name=".activities.CreateTripActivity"
             android:label="@string/title_activity_create_trip"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activities.TripDetailActivity"
+            android:label="@string/title_activity_trip_detail"
             android:theme="@style/AppTheme"></activity>
     </application>
 
