Tag Functionality :tada:

--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
+
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
