--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,11 @@
             android:name=".activities.CreateTripActivity"
             android:label="@string/title_activity_create_trip"
             android:theme="@style/AppTheme" />
-        <activity android:name=".activities.SearchActivity" />
+
+        <activity android:name=".activities.SearchActivity" android:parentActivityName=".activities.TripListActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY" android:value=".activities.TripListActivity"/>
+        </activity>
+
         <activity
             android:name=".activities.TripDetailActivity"
             android:label="@string/title_activity_create_trip"
