--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,34 +27,38 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.0.0'
 
-    compile 'com.android.support:cardview-v7:24.0.+'
-    compile 'com.android.support:recyclerview-v7:24.0.+'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
 
-    compile 'com.google.firebase:firebase-auth:9.4.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
 
-    compile 'com.jakewharton:butterknife:8.2.1'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
 
-    compile 'org.parceler:parceler-api:1.1.1'
     apt 'org.parceler:parceler:1.1.1'
 
+
+
+
+
+
+
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.firebase:firebase-auth:9.4.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
+    compile 'com.jakewharton:butterknife:8.2.1'
+    compile 'org.parceler:parceler-api:1.1.1'
     compile 'com.google.firebase:firebase-database:9.4.0'
     compile 'com.firebaseui:firebase-ui-database:0.5.1'
-
     compile 'com.google.android.gms:play-services-location:9.4.0'
     compile 'com.google.android.gms:play-services-maps:9.4.0'
     compile 'com.google.android.gms:play-services-places:9.4.0'
-
     compile 'com.firebase:geofire-android:2.1.0'
-
     compile 'com.github.qiugang:EditTag:v1.2.3'
     compile 'com.uber.sdk:rides-android:0.5.3'
-
+    compile 'com.astuetz:pagerslidingtabstrip:1.0.1'
+    compile 'com.android.support:support-v4:24.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
