Enter and exit activity transitions :pineapple:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,12 @@
         <activity
             android:name=".activities.CreateTripActivity"
             android:label="@string/title_activity_create_trip"
-            android:theme="@style/AppTheme" />
+            android:parentActivityName=".activities.TripListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="team8.codepath.sightseeingapp.activities.TripListActivity" />
+        </activity>
         <activity
             android:name=".activities.SearchActivity"
             android:parentActivityName=".activities.TripListActivity">
@@ -58,11 +63,21 @@
         <activity
             android:name=".activities.TripDetailActivity"
             android:label="@string/title_activity_create_trip"
-            android:theme="@style/AppTheme" />
+            android:parentActivityName=".activities.TripListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="team8.codepath.sightseeingapp.activities.TripListActivity" />
+        </activity>
         <activity
             android:name=".activities.ProfileActivity"
             android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme" />
+            android:parentActivityName=".activities.TripListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="team8.codepath.sightseeingapp.activities.TripListActivity" />
+        </activity>
         <activity
             android:name=".activities.FavoritesActivity"
             android:label="@string/title_activity_favorites"
@@ -76,7 +91,7 @@
             android:name=".activities.UserTripsActivity"
             android:label="@string/title_activity_user_trips"
             android:parentActivityName=".activities.TripListActivity"
-            android:theme="@style/AppTheme" >
+            android:theme="@style/AppTheme">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="team8.codepath.sightseeingapp.activities.TripListActivity" />
