--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="team8.codepath.sightseeingapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -20,7 +21,7 @@
             android:value="@string/facebook_app_id" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAsHfgV9aUFJ1OJWxbGE9cjmqMUjxV9yPk" />
+            android:value="AIzaSyCcP9wIOMgEO-UlZuFvkBpZMRZTc44tkQo" />
 
         <activity android:name=".activities.LoginActivity">
             <intent-filter>
@@ -34,7 +35,8 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            tools:replace="android:theme"/>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
